--- a/style.css
+++ b/style.css
@@ -220,4 +220,82 @@ footer .social-icons{
     margin-right: 10px;
 }
 
+/* ------------------------------Doubt Section---------------------------- */
 
+.form_div{
+    width: 100%;
+    height: 100vh;
+    position: relative;
+    margin-bottom: 30px;
+}
+.form_div .form_box{
+    width: 400px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    padding: 50px;
+    background: rgba(0,0,0,0.8);
+    border-radius: 10px;
+}
+.form_div .form_box h1{
+    margin-bottom: 30px;
+    font-size: 25px;
+    font-family: 'Roboto Slab';
+    color: white;
+    text-align: center;
+    text-transform: capitalize;
+}
+.form_div .form_box .input_box{
+    position: relative;
+}
+.form_div .form_box .input_box input:focus ~ label,
+.form_div .form_box .input_box input:valid ~ label{
+    top: -20px;
+    left: 0;
+    color: #03a9f4;
+    font-size: 12px;
+}
+.form_div .form_box .input_box input{
+    width: 100%;
+    padding: 10px;
+    color: white;
+    font-size: 16px;
+    letter-spacing: 1px;
+    margin-bottom: 30px;
+    border: none;
+    border-bottom: 1px solid white;
+    background: transparent;
+    outline: none;
+}
+.form_div .form_box .input_box #doubt-area{
+    width: 100%;
+    padding: 10px;
+    color: white;
+    font-size: 16px;
+    letter-spacing: 1px;
+    margin-bottom: 30px;
+    border: none;
+    border-bottom: 1px solid white;
+    background: transparent;
+    outline: none;
+}
+.form_div .form_box .input_box label{
+    position: absolute;
+    top: 0;
+    left: 0;
+    letter-spacing: 1px;
+    padding: 10px 0px;
+    font-size: 16px;
+    color: white;
+    transition: all 0.3s linear;
+}
+.form_div .form_box input[type="submit"]{
+    background: transparent;
+    border: none;
+    outline: none;
+    color: white;
+    background: #03a9f4;
+    padding: 8px 16px;
+    border-radius: 7px;
+}
