--- a/style.css
+++ b/style.css
@@ -302,32 +302,127 @@ footer .social-icons{
 }
 
 /* --------------------About Page-------------------------- */
+/* ----Trigonometric calculator */
 
-.about-page{
+.text_msg{
     width: 80%;
-    height: 75vh;
     margin: auto;
+    text-align: left;
+    margin-top: 20px;
 }
-.about-page .page{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
+.text_msg p{
+    color: grey;
     font-family: 'Roboto Slab';
+}
+.calculator {
     text-align: center;
+    background-color: #efefef;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    width: 80%;
+    margin: auto;
+    margin-top: 20px;
 }
-.about-page .page h1{
+.calculator label {
+    font-size: 18px;
     margin-bottom: 10px;
+    display: block;
 }
-.about-page .page p{
+.calculator input {
+    width: 100%;
+    padding: 8px;
+    margin-bottom: 15px;
+    box-sizing: border-box;
+}
+.calculator button {
+    background-color: #2196F3;
+    color: #fff;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 16px;
+}
+.calculator #result {
+    font-size: 18px;
+    margin-top: 15px;
+}
+
+/* -----------------temperature converter-- */
+
+.temperature-converter {
+    text-align: center;
+    background-color: #efefef;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    width: 80%;
+    margin: auto;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+.temperature-converter label {
+    font-size: 18px;
     margin-bottom: 10px;
+    display: block;
 }
-.about-page .page a{
-    text-decoration: none;
-    color: white;
-    padding: 12px 26px;
-    background-color: red;
-    border-radius: 15px;
-    display: inline-block;
-    margin-top: 10px;
+.temperature-converter input {
+    width: 100%;
+    padding: 8px;
+    margin-bottom: 15px;
+    box-sizing: border-box;
+}
+.temperature-converter button {
+    background-color: #2196F3;
+    color: #fff;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 16px;
+}
+.temperature-converter #results {
+    font-size: 18px;
+    margin-top: 15px;
+}
+
+/* -----------------------Factor Calculator----------------------------- */
+
+.factor-calc{
+    background-color: #efefef;
+    width: 80%;
+    margin: auto;
+    text-align: center;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+.factor-calc input {
+    padding: 10px;
+    font-size: 16px;
+    width: 100%;
+    margin-bottom: 15px;
+    box-sizing: border-box;
+}
+.factor-calc label{
+    font-size: 18px;
+    margin-bottom: 10px;
+    display: block;
+}
+.factor-calc button {
+    background-color: #2196F3;
+    color: #fff;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 16px;
+    margin-top: 5px;
+}
+.factor-calc #resultss {
+    margin-top: 20px;
+    font-size: 18px;
 }
